fix z-index files

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -257,4 +257,6 @@ hr {
 
 .modal {
     width: 90%;
+    z-index: 1000;
+    padding: 5px 10px;
 }
